corrigindo meu fork com as atualizações recentes